--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,7 +3,7 @@ training_pipeline_config:
   artifact_dir: artifact
 
 data_ingestion_config:
-  dataset_download_url: https://github.com/Mritunjay1121/Datasets/raw/main/new_train.tar.gz
+  dataset_download_url: https://github.com/Mritunjay1121/Datasets/raw/main/new_train2.tar.gz
   raw_data_dir: raw_data
   tgz_download_dir: tgz_data
   ingested_dir: ingested_data
@@ -20,7 +20,7 @@ data_validation_config:
   report_page_file_name: report.html
 
 data_transformation_config:
-  add_bedroom_per_room: true
+  duration: true
   transformed_dir: transformed_data
   transformed_train_dir: train
   transformed_test_dir: test
