--- a/config/model.yaml
+++ b/config/model.yaml
@@ -5,15 +5,15 @@ grid_search:
     cv: 5
     verbose: 2
 model_selection:
-  # module_0:
-  #   class: LinearRegression
-  #   module: sklearn.linear_model
-  #   params:
-  #     fit_intercept: true
-  #   search_param_grid:
-  #     fit_intercept:
-  #     - true
-  #     - false
+  module_0:
+    class: LinearRegression
+    module: sklearn.linear_model
+    params:
+      fit_intercept: true
+    search_param_grid:
+      fit_intercept:
+      - true
+      - false
   module_1:
     class: RandomForestRegressor
     module: sklearn.ensemble
